# WebFatSecret

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_14_1819-f21c54c770b7_initial_revision.py
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: auth.py  diary.py  product.py  recipe.py  user.py
app/core/: calculators.py  config.py  security.py
app/core/models/: __init__.py  diary.py  enums.py  product.py  recipe.py  user.py  weight_history.py
app/crud/: diary.py  product.py  user.py
app/db/: session.py
app/schemas/: diary.py  product.py  recipe.py  user.py
app/services/: diary.py
